--- a/files/手机页面1/styles.css
+++ b/files/手机页面1/styles.css
@@ -1,11 +1,11 @@
 ﻿body {
   margin:0px;
   background-image:none;
-  position:relative;
-  left:0px;
-  width:1024px;
-  margin-left:auto;
-  margin-right:auto;
+  position:static;
+  left:auto;
+  width:1080px;
+  margin-left:0;
+  margin-right:0;
   text-align:left;
 }
 .form_sketch {
@@ -16,43 +16,43 @@
   position:absolute;
   z-index:0;
 }
-#u0_img {
+#u6_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:1554px;
-  height:817px;
+  width:1091px;
+  height:1920px;
 }
-#u0 {
+#u6 {
   border-width:0px;
   position:absolute;
-  left:-213px;
+  left:-6px;
   top:0px;
-  width:1554px;
-  height:817px;
+  width:1091px;
+  height:1920px;
   display:flex;
 }
-#u0 .text {
+#u6 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u0_text {
+#u6_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u1_div {
+#u7_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:1072px;
-  height:185px;
+  width:761px;
+  height:209px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -63,140 +63,106 @@
   font-family:'云峰字库重庆山城棒棒体 常规', '云峰字库重庆山城棒棒体', sans-serif;
   font-weight:400;
   font-style:normal;
-  font-size:132px;
+  font-size:90px;
   color:#FD5900;
 }
-#u1 {
+#u7 {
   border-width:0px;
   position:absolute;
-  left:28px;
-  top:186px;
-  width:1072px;
-  height:185px;
+  left:160px;
+  top:362px;
+  width:761px;
+  height:209px;
   display:flex;
   font-family:'云峰字库重庆山城棒棒体 常规', '云峰字库重庆山城棒棒体', sans-serif;
   font-weight:400;
   font-style:normal;
-  font-size:132px;
+  font-size:90px;
   color:#FD5900;
 }
-#u1 .text {
+#u7 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u1_text {
+#u7_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u2_img {
+#u8_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
-  height:180px;
+  width:181px;
+  height:568px;
 }
-#u2 {
+#u8 {
   border-width:0px;
   position:absolute;
-  left:39px;
-  top:442px;
-  width:44px;
-  height:180px;
+  left:160px;
+  top:1107px;
+  width:181px;
+  height:568px;
   display:flex;
   font-family:'华文行楷', sans-serif;
   font-weight:400;
   font-style:normal;
-  font-size:40px;
+  font-size:100px;
   color:#000000;
 }
-#u2 .text {
+#u8 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u2_text {
+#u8_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
 }
-#u3_img {
+#u9_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
-  height:180px;
+  width:282px;
+  height:377px;
 }
-#u3 {
+#u9 {
   border-width:0px;
   position:absolute;
-  left:925px;
-  top:442px;
-  width:44px;
-  height:180px;
+  left:399px;
+  top:37px;
+  width:282px;
+  height:377px;
   display:flex;
-  font-family:'华文行楷', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  font-size:40px;
-  color:#000000;
 }
-#u3 .text {
+#u9 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u3_text {
-  border-width:0px;
-  white-space:nowrap;
-  text-transform:none;
-}
-#u4_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:169px;
-  height:226px;
-}
-#u4 {
-  border-width:0px;
-  position:absolute;
-  left:428px;
-  top:18px;
-  width:169px;
-  height:226px;
-  display:flex;
-}
-#u4 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u4_text {
+#u9_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u5_div {
+#u10_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:64px;
-  height:26px;
+  width:99px;
+  height:48px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -207,26 +173,60 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:16px;
+  font-size:25px;
 }
-#u5 {
+#u10 {
   border-width:0px;
   position:absolute;
-  left:958px;
-  top:18px;
-  width:64px;
-  height:26px;
+  left:966px;
+  top:13px;
+  width:99px;
+  height:48px;
   display:flex;
-  font-size:16px;
+  font-size:25px;
 }
-#u5 .text {
+#u10 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u5_text {
+#u10_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u11_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:181px;
+  height:568px;
+}
+#u11 {
+  border-width:0px;
+  position:absolute;
+  left:678px;
+  top:1107px;
+  width:181px;
+  height:568px;
+  display:flex;
+  font-family:'华文行楷', sans-serif;
+  font-weight:400;
+  font-style:normal;
+  font-size:100px;
+  color:#000000;
+}
+#u11 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u11_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
