--- a/files/英文首页1/styles.css
+++ b/files/英文首页1/styles.css
@@ -16,7 +16,7 @@
   position:absolute;
   z-index:0;
 }
-#u0_img {
+#u24_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -24,7 +24,7 @@
   width:1554px;
   height:817px;
 }
-#u0 {
+#u24 {
   border-width:0px;
   position:absolute;
   left:-213px;
@@ -33,26 +33,26 @@
   height:817px;
   display:flex;
 }
-#u0 .text {
+#u24 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u0_text {
+#u24_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u1_div {
+#u25_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:1072px;
-  height:185px;
+  width:1079px;
+  height:144px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -60,107 +60,101 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'云峰字库重庆山城棒棒体 常规', '云峰字库重庆山城棒棒体', sans-serif;
-  font-weight:400;
+  font-family:'黑体 Bold', '黑体 Regular', '黑体', sans-serif;
+  font-weight:700;
   font-style:normal;
-  font-size:132px;
+  font-size:65px;
   color:#FD5900;
 }
-#u1 {
+#u25 {
   border-width:0px;
   position:absolute;
   left:28px;
   top:186px;
-  width:1072px;
-  height:185px;
+  width:1079px;
+  height:144px;
   display:flex;
-  font-family:'云峰字库重庆山城棒棒体 常规', '云峰字库重庆山城棒棒体', sans-serif;
-  font-weight:400;
+  font-family:'黑体 Bold', '黑体 Regular', '黑体', sans-serif;
+  font-weight:700;
   font-style:normal;
-  font-size:132px;
+  font-size:65px;
   color:#FD5900;
 }
-#u1 .text {
+#u25 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u1_text {
+#u25_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u2_img {
+#u26_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
-  height:180px;
+  width:226px;
+  height:64px;
 }
-#u2 {
+#u26 {
   border-width:0px;
   position:absolute;
-  left:39px;
-  top:442px;
-  width:44px;
-  height:180px;
+  left:28px;
+  top:500px;
+  width:226px;
+  height:64px;
   display:flex;
-  font-family:'华文行楷', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  font-size:40px;
+  font-size:34px;
   color:#000000;
 }
-#u2 .text {
+#u26 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u2_text {
+#u26_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
 }
-#u3_img {
+#u27_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:44px;
-  height:180px;
+  width:279px;
+  height:64px;
 }
-#u3 {
+#u27 {
   border-width:0px;
   position:absolute;
-  left:925px;
-  top:442px;
-  width:44px;
-  height:180px;
+  left:698px;
+  top:500px;
+  width:279px;
+  height:64px;
   display:flex;
-  font-family:'华文行楷', sans-serif;
-  font-weight:400;
-  font-style:normal;
-  font-size:40px;
+  font-size:34px;
   color:#000000;
 }
-#u3 .text {
+#u27 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u3_text {
+#u27_text {
   border-width:0px;
-  white-space:nowrap;
+  word-wrap:break-word;
   text-transform:none;
 }
-#u4_img {
+#u28_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -168,7 +162,7 @@
   width:169px;
   height:226px;
 }
-#u4 {
+#u28 {
   border-width:0px;
   position:absolute;
   left:428px;
@@ -177,26 +171,26 @@
   height:226px;
   display:flex;
 }
-#u4 .text {
+#u28 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u4_text {
+#u28_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u5_div {
+#u29_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:64px;
-  height:26px;
+  width:57px;
+  height:31px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -207,26 +201,26 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:16px;
+  font-size:25px;
 }
-#u5 {
+#u29 {
   border-width:0px;
   position:absolute;
   left:958px;
   top:18px;
-  width:64px;
-  height:26px;
+  width:57px;
+  height:31px;
   display:flex;
-  font-size:16px;
+  font-size:25px;
 }
-#u5 .text {
+#u29 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u5_text {
+#u29_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
