--- a/files/英文首页1/styles.css
+++ b/files/英文首页1/styles.css
@@ -21,16 +21,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:1554px;
-  height:817px;
+  width:1872px;
+  height:1147px;
 }
 #u24 {
   border-width:0px;
   position:absolute;
-  left:-213px;
+  left:-424px;
   top:0px;
-  width:1554px;
-  height:817px;
+  width:1872px;
+  height:1147px;
   display:flex;
 }
 #u24 .text {
@@ -51,8 +51,8 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:1079px;
-  height:144px;
+  width:1639px;
+  height:227px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -63,21 +63,21 @@
   font-family:'黑体 Bold', '黑体 Regular', '黑体', sans-serif;
   font-weight:700;
   font-style:normal;
-  font-size:65px;
+  font-size:100px;
   color:#FD5900;
 }
 #u25 {
   border-width:0px;
   position:absolute;
-  left:28px;
-  top:186px;
-  width:1079px;
-  height:144px;
+  left:-307px;
+  top:337px;
+  width:1639px;
+  height:227px;
   display:flex;
   font-family:'黑体 Bold', '黑体 Regular', '黑体', sans-serif;
   font-weight:700;
   font-style:normal;
-  font-size:65px;
+  font-size:100px;
   color:#FD5900;
 }
 #u25 .text {
@@ -97,18 +97,18 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:226px;
-  height:64px;
+  width:367px;
+  height:104px;
 }
 #u26 {
   border-width:0px;
   position:absolute;
-  left:28px;
-  top:500px;
-  width:226px;
-  height:64px;
+  left:-307px;
+  top:739px;
+  width:367px;
+  height:104px;
   display:flex;
-  font-size:34px;
+  font-size:50px;
   color:#000000;
 }
 #u26 .text {
@@ -128,18 +128,18 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:279px;
-  height:64px;
+  width:367px;
+  height:104px;
 }
 #u27 {
   border-width:0px;
   position:absolute;
-  left:698px;
-  top:500px;
-  width:279px;
-  height:64px;
+  left:864px;
+  top:739px;
+  width:367px;
+  height:104px;
   display:flex;
-  font-size:34px;
+  font-size:43px;
   color:#000000;
 }
 #u27 .text {
@@ -159,16 +159,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:169px;
-  height:226px;
+  width:330px;
+  height:441px;
 }
 #u28 {
   border-width:0px;
   position:absolute;
-  left:428px;
+  left:347px;
   top:18px;
-  width:169px;
-  height:226px;
+  width:330px;
+  height:441px;
   display:flex;
 }
 #u28 .text {
@@ -189,10 +189,10 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:57px;
-  height:31px;
+  width:122px;
+  height:66px;
   background:inherit;
-  background-color:rgba(255, 255, 255, 1);
+  background-color:rgba(255, 255, 255, 0.698039215686274);
   box-sizing:border-box;
   border-width:1px;
   border-style:solid;
@@ -201,17 +201,17 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-size:25px;
+  font-size:40px;
 }
 #u29 {
   border-width:0px;
   position:absolute;
-  left:958px;
-  top:18px;
-  width:57px;
-  height:31px;
+  left:1260px;
+  top:38px;
+  width:122px;
+  height:66px;
   display:flex;
-  font-size:25px;
+  font-size:40px;
 }
 #u29 .text {
   position:absolute;
