--- a/files/手机页面英文1/styles.css
+++ b/files/手机页面英文1/styles.css
@@ -21,15 +21,15 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:1091px;
+  width:1082px;
   height:1920px;
 }
 #u14 {
   border-width:0px;
   position:absolute;
-  left:-6px;
+  left:-3px;
   top:0px;
-  width:1091px;
+  width:1082px;
   height:1920px;
   display:flex;
 }
@@ -84,7 +84,7 @@
   width:117px;
   height:57px;
   background:inherit;
-  background-color:rgba(255, 255, 255, 1);
+  background-color:rgba(255, 255, 255, 0.549019607843137);
   box-sizing:border-box;
   border-width:1px;
   border-style:solid;
